# ai-parodie-generator-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PHASE2_AUDIO_ANALYSIS.md
requirements/: ai.txt  audio.txt  base.txt  dev.txt  frontend.txt
scripts/: check_fastapi.py  fix_fastapi.sh  full_reinstall.sh  install_fedora.sh  quick_setup.sh  test_installation.py
src/ai/: voice_separator.py
src/backend/: main.py  utils.py
src/frontend/: main.py
src/utils/: audio.py  audio_io.py
