[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-parodie-generator-ai"
version = "0.1.0"
description = "AI-powered music parody generation with voice cloning and singing synthesis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AI Music Parody Generator Contributors"}
]
keywords = ["music", "parody", "ai", "voice-cloning", "singing-synthesis", "audio-processing"]

[tool.setuptools]
packages = []
